<resources>
    <string name="app_name">FinderFood</string>
    <string name="enter">Entrar</string>
    <string name="signIn">Não tem uma conta ? Crie aqui.</string>
    <string name="insert">Cadastrar Receita</string>
    <string name="foto">foto</string>
    <string name="contacts">Contatos</string>
    <string name="logout">Deslogar</string>
    <string name="btn_chat">Enviar</string>
    <string name="message">Digite a mensagem</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
</resources>
