<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register">

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button_rounded"
            android:text="@string/insert"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edit_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edit_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />

        <EditText
            android:id="@+id/edit_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_selected_photo"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_edittext_rounded"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textEmailAddress"
            android:paddingLeft="8dp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/bg_edittext_rounded"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edit_email"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/bg_edittext_rounded"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="@id/edit_username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/edit_username"
            app:layout_constraintTop_toBottomOf="@+id/edit_username" />

        <Button
            android:id="@+id/btn_selected_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button_img_rounded"
            android:text="@string/foto"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_photo"
            app:layout_constraintBottom_toBottomOf="@+id/btn_selected_photo"
            app:layout_constraintEnd_toEndOf="@+id/btn_selected_photo"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/btn_selected_photo"
            app:layout_constraintTop_toTopOf="@+id/btn_selected_photo"
            app:layout_constraintVertical_bias="1.0"
            android:layout_width="150dp"
            android:layout_height="150dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>